# pronin_test_task

./: README.md  pyproject.toml
infra/: .env.sample  docker-compose.yml  nginx.conf
pronin_test_task/: Dockerfile  docker-entrypoint.sh  requirements.txt
pronin_test_task/data_for_tests/: correct_data.csv
pronin_test_task/data_for_tests/data_handler/: correct_data.csv  wrong_body.csv  wrong_headers.csv
pronin_test_task/data_for_tests/delivery/: correct_order_data.json  correct_order_response_data.json  incorrect_order_data.json
pronin_test_task/data_handler/: exceptions.py  models.py  serializers.py  services.py  tests.py  urls.py  utils.py  views.py
pronin_test_task/data_handler/migrations/: 0001_initial.py
pronin_test_task/delivery/: pochta_rf_utils.py  sdek_utils.py  serializers.py  services.py  tests.py  urls.py  validators.py  views.py
pronin_test_task/root/: asgi.py  settings.py  urls.py  wsgi.py
