[tool.poetry]
name = "pronin-test-task"
version = "0.1.0"
description = ""
authors = ["Ларькин Михаил <jetpilot314@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
djangorestframework = "^3.14.0"
python-dotenv = "0.21.1"
black = "^23.7.0"
flake8 = "^6.0.0"
flake8-broken-line = "^1.0.0"
flake8-isort = "^6.0.0"
flake8-plugin-utils = "^1.3.3"
flake8-return = "^1.2.0"
coverage = "^7.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
